@@ -21,6 +21,10 @@ Bug Fixes
    if skip is large. Fixed wrong final offset calculation in 
    PathHierarchyTokenizer. (Uwe Schindler, Mike McCandless, Robert Muir)
 
+  * LUCENE-4022: Offline Sorter used to build spellcheck & suggest dictionaries
+    wrongly used minimum sort buffer resulting in potentially slow FST &
+    Dictionary building. (Simon Willnauer) 
+
 Tests
  
  * LUCENE-3919, LUCENE-3969, LUCENE-3990: more thorough testing of analysis 
